<resources>
    <string name="app_name">Hillforts</string>
    <string name="button_addHillfort">Add Hillfort</string>
    <string name="button_addImage"> Add Image </string>
    <string name="button_location">Set Location</string>
    <string name="button_register">Register</string>
    <string name="button_editUser">Submit</string>
    <string name="button_login">Log In</string>

    <string name="hint_hillfortTitle">Hillfort Name</string>
    <string name="hint_hillfortDescription">Hillfort Description</string>
    <string name="hint_loginEmail">Enter Email</string>
    <string name="hint_loginPassword">Enter Password</string>
    <string name="hint_registerPassword">Enter Password</string>
    <string name="hint_registerEmail">Enter Email address</string>
    <string name="hint_registerFirstName">Enter first name</string>
    <string name="hint_registerLastName">Enter last name</string>
    <string name="hint_editFirstName">Edit First Name</string>
    <string name="hint_editLastName">Edit Last Name</string>
    <string name="hint_editEmail">Edit Password</string>
    <string name="hint_editPassword">Edit Password</string>

    <string name="menu_addHillfort">Add</string>
    <string name="menu_cancelHillfort">Cancel</string>
    <string name="menu_cancelSetting">Cancel</string>
    <string name="menu_deleteHillfort">Delete Hillfort</string>
    <string name="menu_Register">Register</string>
    <string name="menu_openMap">Map</string>

    <string name="save_hillfort"> Save Hillfort </string>
    <string name="enter_hillfort_name">Enter Hillfort Name</string>
    <string name="select_hillfort_image">Select hillfort image</string>
    <string name="change_hillfort_image">Change hillfort image</string>
    <string name="checkbox">visited?</string>
    <string name="selectDate">Select Date</string>
    <string name="title_activity_map">Map</string>


    <string name="users_visited_hillforts"></string>
    <string name="users_recorded_hillforts"></string>
    <string name="total_hillforts"></string>
    <string name="title_activity_hillfort_maps">Map of All Hillforts</string>

    <string name="placemark_image_placeholder">Placemark Image</string>
    <string name="placemark_title_placeholder">Placemark Title</string>
    <string name="placemark_description_placeholder">Placemark Description</string>

    <string name="menu_showMap">Show Map</string>
    <string name="menu_logout">Logout</string>

    <string name="title_activity_hillfort_list">Hillforts</string>
    <string name="title_activity_hillfort">Hillfort</string>
    <string name="title_activity_edit_location">Hillfort</string>




    <string name="action_donate">Donate</string>
    <string name="action_report">Report</string>
    <string name="donateTitle">Welcome Homer</string>
    <string name="donateSubtitle">Please Give Generously</string>
    <string name="donateButton">Donate</string>
    <string name="paypal">PayPal</string>
    <string name="direct">Direct</string>
    <string name="amount">Amount</string>
    <string name="total">Total so Far</string>
    <string name="totalSoFar">$ Total</string>
    <string name="reportTitle">Donations Report</string>
    <string name="defaultAmount">00</string>
    <string name="defaultMethod">N/A</string>
    <string name="enter_amount">Enter Amount</string>

    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Donation (Lab K07a)</string>
    <string name="nav_header_subtitle">voteforhomer@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_donate">Donate</string>
    <string name="menu_report">Report</string>
    <string name="menu_favourites">Favourites</string>
    <string name="menu_about">About Us</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
